style changed better
Fonts added on google fonts

--- a/assets/templates/aside_01.html
+++ b/assets/templates/aside_01.html
@@ -18,7 +18,7 @@
     <a id="side-video-btn-2" href="---"><img id="side-feature-image" src="/assets/images/posts/Run-Script-On-Adobe-Applications.jpg" alt=""></a>
     <p style="text-align: center;">Watch the Video Tutorial Download Dependency Files Below</p>
     <a id="side-download-btn" href="---" class="btn-blue big-font" title="Download Related File" download>Download</a>
-    <a id="side-video-btn" href="---" class="btn-red big-font" title="See the full video tutorial">Video Link</a>
+    <a id="side-video-btn" href="---" class="btn-red big-font" title="See the full video tutorial" target="_blank">Video Link</a>
 </section>
 
 <section  class="aside" >
@@ -37,7 +37,7 @@
     <a href="https://www.youtube.com/@Motiontill?%20sub_confirmation=1" class="btn-red round">Follow On Youtube</a>
 </section>
 
-<section class="aside" >
+<!-- <section class="aside" >
     <div class="grid-container"
         style="text-align: center; background-color: rgba(0, 0, 0, 0.1);padding:.5rem .3rem ;border-radius:.5rem;">
 
@@ -48,8 +48,8 @@
 
 
     </div>
-</section>
-
+</section> -->
+<!-- 
 <section class="aside" >
     <p>Share This Article In Social: </p>
     <div class="row-container">
@@ -59,7 +59,7 @@
         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://www.motiontill.com"  title="Share This Page" target="_blank"><img width="30px" src="/assets/images/linkedin.png" alt=""></a>
     </div>
 
-</section>
+</section> -->
 
 
 
