--- a/assets/templates/category_01.html
+++ b/assets/templates/category_01.html
@@ -2,6 +2,6 @@
 <article >
     <img src="[[img-url]]" alt="[[alt]]">
     <h2>[[title]]</h2>
-    <p>[[excerept]]</p>
+    <!-- <p>[[excerept]]</p> -->
 </article>
 </a>
