--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,8 @@
-@font-face {
-    font-family: ac;
-    src: url(/assets/fonts/Ap-Light-english.woff2);
-    font-weight: light;
-}
-
-@font-face {
-    font-family: ac;
-    src: url(/assets/fonts/Ap-Bold-english.woff2);
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: ac;
-    src: url(/assets/fonts/Ap-Medium-english.woff2);
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: ac;
-    src: url(/assets/fonts/Ap-Regular-english.woff2);
-    font-weight: normal;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
     margin: 0;
-    font-family: ac, Verdana, Geneva, Tahoma, sans-serif
+    font-family:"Roboto",  sans-serif;
 }
 
 img {
@@ -42,6 +19,7 @@ h1{
     margin: 0 auto;
 }
 *{
+    font-family:"Roboto",  sans-serif;
     color: #5c5c64;
     box-sizing: border-box;
     direction: ltr;
@@ -182,22 +160,33 @@ opacity: .99;
      }
 }
 #feature-image{
+    box-sizing: border-box;
     display: block;
     margin: auto;
+    padding: 2rem;
+    background-color: white;
+    filter: drop-shadow(0 0 0.2rem rgba(0, 0, 0.5, 0.05));
+    margin-bottom:1.5rem ;
 }
 #excerept{
+    color: #96969b;
     display: block;
     text-align: center;
+    padding:.5rem 2.5rem;
+    border-bottom:1px solid #89898f17;
+    margin-bottom: 1rem;
 }
 .grid-container{
    display:grid;
-   gap:.5rem;
+   gap:1.5rem;
    grid-template-columns: repeat(2, 1fr);
 align-items: stretch;
 align-self: start;
+filter: drop-shadow(0 0 .21rem rgba(0, 0, 0, 0.062));
 }
 /***********.category-item ***********/
     .category-item{
+        padding: 1rem;
         display: inline-block;
        box-sizing: border-box;
        max-height: fit-content;
@@ -206,16 +195,16 @@ align-self: start;
         box-shadow: 0 0 3rem rgba(0, 0, 0, 0.11);
         display: flex;
         flex-direction: column;
-        gap: .0rem;
+        gap: 1.0rem;
     }
     .category-item h2{
-        padding: 0 .9rem ;
+        font-size: 1rem;
+        padding: 0 .0rem ;
         height: auto;
     }
     .category-item p{
-        font-size: .8rem;
-        padding:1rem ;
-     
+        font-size: .0rem;
+        padding:0rem ;
         height: auto;
 
     }
