--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,3 +211,24 @@ filter: drop-shadow(0 0 .21rem rgba(0, 0, 0, 0.062));
     }
 
 /****************************************/
+.open-it{
+    cursor: pointer;
+    display: block;
+    max-width: 300px;
+    width: auto;
+    margin: 3rem auto;
+    padding: .5rem;
+    background-color: #ffffff;
+    box-shadow:0 .5rem 1rem #73737a41;
+    transition: all ease-in-out .6s;
+}
+.open-it:hover{
+    scale: 1.2;
+}
+
+.center-image{
+    display: block;
+    padding: 5rem;
+    margin: auto;
+    max-width: none;
+}
