--- a/assets/templates/header_01.html
+++ b/assets/templates/header_01.html
@@ -78,6 +78,19 @@
         .gotop:hover{
             background-color:#573dea85;
         }
+
+        #modal{
+            position:fixed;
+            display: none;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba(255, 255, 255, 0.65);
+            backdrop-filter:blur(.5rem);
+            z-index: 200;
+            overflow-y: scroll;
+        }
 </style>
 
 <div id="gotop" class="header ">
@@ -92,3 +105,10 @@
     </div>
 </div>
 <a class="gotop" href="#gotop">Up ↑</a>
+
+<div id="modal">
+
+</div>
+
+
+
